# iasc-stm-haskell

./: README.md  stm-samples-haskell.cabal
0.5_stm_intro/: transfer_test.hs
0_par_seq/: README.md
1.5_stm_intro/: README.md  timesoflore.hs
1_broken_accounts/: .gitignore  broken-accounts.cabal
1_broken_accounts/src/: Main.hs
2.5_TMVars/: tmvars.hs
2_stm_accounts/: stm-accounts.cabal
2_stm_accounts/src/: Main.hs
3_stm_accounts_ordering/: stm-accounts.cabal
3_stm_accounts_ordering/src/: Account.hs  Combinators.hs  Main.hs
3_stm_accounts_ordering/src/Control/Concurrent/STM/: Ensure.hs
4_stm_server/: ConcurrentUtils.hs  server.hs  server_stm.hs
src/: Main.hs
