name:                stm-accounts-ordering
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Franco Leonardo Bulgarelli
maintainer:          flbulgarelli@yahoo.com.ar
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

executable stm-samples-haskell
  main-is:             Main.hs
  build-depends:
    base               >=4.6 && <4.7,
    stm                >= 2.4,
    async              >= 2.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N4"